<resources>
    <string name="app_name">App_System_Management_Visitors_For_Old_Aparment</string>
    <string name="edit_text_form">Regiser form</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_age">Age</string>
    <string name="edit_text_id">Identity card</string>
    <string name="edit_text_visit_time">Visit time</string>
    <string name="edit_text_staff_name">Staff name</string>
    <string name="edit_text_status">Status</string>
    <string name="hint_name">Nguyễn Văn A</string>
    <string name="hint_age">18</string>
    <string name="hint_id_card">123456789</string>
    <string name="hint_visit_time">8:30 AM</string>
    <string name="hint_staff_name">Nguyễn Văn B</string>
    <string name="hint_status">success</string>
    <string name="hint_phone">Owner phone</string>
    <string name="btn_register">Register</string>
    <string name="padding_top">20dp</string>
    <string name="padding_bottom">20dp</string>
    <string name="padding_left">20dp</string>
    <string name="padding_right">20dp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="avatar_login">TODO</string>
    <string name="text_button_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_room_id">Room id</string>
    <string name="text_home">Home</string>
    <string name="register_visit">Register visit</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="pin_code">PIN CODE</string>
    <string name="visiting_register_form">Visiting register form</string>
    <string name="edit_time">Time</string>
    <string name="edit_id_card">ID card</string>
    <string name="edit_id_acc">ID acc</string>
    <string name="edit_visitor_name">Name</string>
    <string name="register">Register</string>
    <string name="button">Button</string>
    <string name="drop_down">Select room ID</string>
    <string name="satisfy">Your satisfy level is: </string>
    <string name="pleas_rate_the_service_level">Please rate the service level</string>
    <string name="submit">Submit</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="send">Send</string>
    <string name="new_visitor_form">New visitor form</string>
    <string name="new_account_form">New account form</string>
    <string name="edit_account_form">Edit account form</string>
    <string name="edit_visitor_form">Edit visitor form</string>
    <string name="save">Save</string>
    <string name="new_apartment_form">New apartment form</string>
    <string name="edit_apartment_form">Edit apartment form</string>
    <string name="delete_confirm">Delete confirm</string>
    <string name="message">message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pin_code_title">Pin code</string>
    <string name="enter_your_pin_code_here">Enter your pin code here</string>
    <string name="verify">Verify</string>
    <string name="dashboard">Dashboard</string>
    <string name="visitor">Visitor</string>
    <string name="apartment">Apartment</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="log_out">Log out</string>
    <string name="accounts">Accounts</string>
    <string name="search">Search</string>
    <string name="what_do_you_want_to_find">What do you want to find?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">Del</string>
    <string name="_0">0</string>
    <string name="enter">Enter</string>
    <string name="id_card">id card: </string>
    <string name="_2538545527">2538545527</string>
    <string name="name">name: </string>
    <string name="truong_quang_minh">truong quang minh</string>
    <string name="a125">A125</string>
    <string name="visit_time">visit_time: </string>
    <string name="_8_30_am">8:30 AM</string>
    <string name="visitor_info">visitor_info:</string>
    <string name="owner_phone">owner phone</string>
    <string name="owner_name">owner name</string>
    <string name="room_id">room id: </string>
    <string name="acc_id">acc id: </string>
    <string name="password">password: </string>
    <string name="pin_code_pass">pin_code: </string>
    <string name="username">username: </string>
    <string name="call_phone">Call phone</string>
    <string name="call_zalo">Call zalo</string>
    <string name="visitor_name">visitor_name</string>
    <string name="feedbacks_visitor">feedback</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="edit_pin_code">Pin code</string>
    <string name="apartment_id">Apartment Id</string>
    <string name="home">Home</string>
    <string name="name_visitor">Name</string>
    <string name="date">date:</string>
    <string name="from">From date</string>
    <string name="to">To date</string>
    <string name="appID">3737747518266522484</string>
    <string name="chart">Chart</string>
</resources>