<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    tools:context=".AddNewAccountActivity">
    <TextView
        android:id="@+id/text_title_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_form"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <EditText
        android:id="@+id/edit_acc_id"
        android:background="@drawable/edit_text_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_id_acc"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_form"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_acc_id"
        app:layout_constraintStart_toStartOf="@+id/edit_acc_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_acc_id"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_password"
        android:background="@drawable/edit_text_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_password"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_username"
        tools:ignore="TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/edit_pin_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/edit_pin_code"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="true"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/save"
        android:text="@string/save"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pin_code"
        tools:ignore="RtlHardcoded,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>