<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AddNewApartmentActivity">

    <TextView
        android:id="@+id/text_title_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_apartment_form"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_new_name"
        android:background="@drawable/edit_text_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_visitor_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        android:textColor="#01579B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_form"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_room_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        android:textColor="#01579B"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/save"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_room_id"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#01579B"
        android:textSize="30sp"
        android:textColor="#01579B"
        app:layout_constraintEnd_toEndOf="@+id/edit_new_name"
        app:layout_constraintStart_toStartOf="@+id/edit_new_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_name" />
</androidx.constraintlayout.widget.ConstraintLayout>