<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_panel_2"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">
        <TextView
            android:id="@+id/acc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/acc_id"
            android:textColor="@color/light_blue_600"
            android:textSize="26sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/username"
            android:textColor="@color/light_blue_600"
            android:textSize="26sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/password"
            android:textColor="@color/light_blue_600"
            android:textSize="26sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/pin_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/pin_code_pass"
            android:textColor="@color/light_blue_600"
            android:textSize="26sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="32dp"
                android:background="@color/green"
                android:src="@drawable/edit_48px"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_red"
                android:src="@drawable/delete_48px"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>